WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
271706
[css-align] Fix serialization of place-content/items/self properties
https://bugs.webkit.org/show_bug.cgi?id=271706
Summary
[css-align] Fix serialization of place-content/items/self properties
Karl Dubost
Reported
2024-03-26 07:20:59 PDT
With <div id="target" style="place-content: normal;">foo</div> And const target = document.querySelector('#target'); target.style.cssText; target.style.getPropertyValue('place-content'); window.getComputedStyle(target).placeContent; Safari cssText: "align-content: normal; justify-content: normal;" getPropertyValue: "normal" getComputedStyle: "normal normal" Firefox cssText: "place-content: normal;" getPropertyValue: "normal" getComputedStyle: "normal" Chrome cssText: "place-content: normal;" getPropertyValue: "normal" getComputedStyle: "normal"
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-03-26 07:21:11 PDT
<
rdar://problem/125415088
>
Tim Nguyen (:ntim)
Comment 2
2024-07-27 22:14:29 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/31358
EWS
Comment 3
2024-07-28 19:37:29 PDT
Committed
281476@main
(e095068eb230): <
https://commits.webkit.org/281476@main
> Reviewed commits have been landed. Closing PR #31358 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug