[css-align] Fix serialization of place-content/items/self properties https://bugs.webkit.org/show_bug.cgi?id=271706 rdar://125415088

Reviewed by Darin Adler.

Use `getCSSPropertyValuesFor2SidesShorthand` instead of `getCSSPropertyValuesForShorthandProperties` since these shorthands have 2 longhands that can be identical.

If they are identical, serialize to the shortest form.

Also remove these shorthands from `canUseShorthandForLonghand`, so they are not treated as legacy shorthands and expanded to their longhands in `cssText`.

* LayoutTests/css3/parse-place-content.html:
* LayoutTests/css3/parse-place-items.html:
* LayoutTests/css3/parse-place-self.html:
* LayoutTests/imported/w3c/web-platform-tests/css/css-align/content-distribution/place-content-shorthand-006-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-align/default-alignment/place-items-shorthand-006-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-align/parsing/place-content-computed-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-align/parsing/place-items-computed-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-align/parsing/place-self-computed-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-align/self-alignment/place-self-shorthand-006-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-grid/alignment/grid-content-alignment-with-abspos-001-expected.txt:
* Source/WebCore/css/ComputedStyleExtractor.cpp:
(WebCore::ComputedStyleExtractor::valueForPropertyInStyle const):
* Source/WebCore/css/StyleProperties.cpp:
(WebCore::canUseShorthandForLonghand):

Canonical link: https://commits.webkit.org/281476@main